fix: layout overflow issues

--- a/src/Components/AboutUs/styles.module.scss
+++ b/src/Components/AboutUs/styles.module.scss
@@ -19,6 +19,7 @@
 
   padding: 4rem 1.6rem 0 1.6rem;
 
+  overflow-x: hidden;
   margin: 0 auto 5rem;
   max-width: 1020px;
 
