--- a/src/Components/Header/styles.module.scss
+++ b/src/Components/Header/styles.module.scss
@@ -28,10 +28,10 @@
     width: 0;
     transition: width 0.4s cubic-bezier(0.7, 0.3, 0.3, 1);
     z-index: 5;
+    overflow-x: hidden;
 
     li:last-child {
       transform: translateX(37rem);
-      opacity: 0;
     }
 
     &.active {
